		- `formatVersion` element was added to `.h2song`, `.h2pattern`, `.h2playlist`,
			drumkit and config files. This integer will be increment each time the
			format will be changed.
		- pre-fader gain does now include component gain as well.
		- PatternEditor:
				- Handling is now centered on interaction with existing notes. Only
				  adding of new notes is dependent on the current grid.
				- Alt key modifier can be used to add/move/change off the current grid.
				- Instruments of the current kit and instrument types of all notes in a
				  pattern are now handled separately in the sidebar.
				- Single notes can now be dragged or altered using right-click popup
				  menu without prior selection.
				- Notes not associated with an instrument of the current kit are now
				  visible and can be handled like regular notes.
				- Pattern name is now shown together with other active patterns tab bar.
				- Property drawing (NotePropertiesRuler) is now only bound to right
				  mouse button.
				- Cursor, selection lasso, and selected and hovered notes are now synced
				  between among all editors.
				- Property changes based on wheel and key event on the same set of notes
				  as well as property drawing can now be undone/redone in a single action.
				- PianoRoll does now have a proper sidebar including per-line action in
				  right click popup menu.
				- Right-click drag does now alter either note length or property.
	* Fixed
		- Components can now carry arbitrary names and name duplication is handled
			properly.
		- Paths to songs and scripts are now properly saved relative to a
			`.h2playlist` file (in case the corresponding option was set).
		- Stop notes do now stop all notes of the same instrument at the same
			position (e.g. in chords or using multiple patterns).
	* Removed
		- Preferences options `restoreLastSong` and `restoreLastPlaylist` were
			dropped. Instead, both will always be restored automatically. In order to